fix: adjust layout and spacing in contatos and rodape styles for improved consistency

--- a/src/styles/contatos.css
+++ b/src/styles/contatos.css
@@ -5,7 +5,6 @@
     /* padding: 5rem 2rem; */
     position: relative;
     overflow: hidden;
-    
 }
 
 .contatos-titulo {
@@ -16,7 +15,7 @@
 }
 
 .formulario-contato {
-    max-width: 600px;
+    max-width: 37.5rem;
     margin: 0 auto;
     background: var(--vidroDois);
     backdrop-filter: blur(5px);
@@ -73,7 +72,7 @@ label {
     display: flex;
     gap: 1.5rem;
     justify-content: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .social-link {
